----------------------------------------------------------


Wishlist for MIDIbox SEQ V4 Plus
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

V4 Plus will require a STM32F4 core which offers much more memory.
Accordingly, resource hungry features could be implemented.

Here a list:

- Expression Layer:
  http://midibox.org/forums/topic/18732-fr-expression-layer/

- Audio metronome function
http://midibox.org/forums/topic/19300-metronome-audio-out-on-stm32f4discovery/

- allocate some memory to sort the directory view instead of loading directly from SD Card
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653


- allow to define delays based on ports & channels instead of only the port.
http://midibox.org/forums/topic/19774-question-about-expected-behaviour-in-song-mode/#comment-173653

- MIDI filter
  http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=174145

- Multi Channel Recording
  http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=175313

- Interpolate Pitch Bend values (+ more, such as CC?)
  http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=175313

- save Robotizer settings
  http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=175585

- from http://midibox.org/forums/topic/13137-midibox-seq-v4-release-feedback/?do=findComment&comment=175591
1) Enable the option to create a file (on disk) to map "real synthesizer names" to combinations of out-port and channel.

2) In the track events page, offer the option to additionally select by synthesizer name (an abbreviation of 6-8 characters would be enough). When selecting a synthesizer name (or when loading a session), it could then select the according out-port and channel (and display it).
